test_suite/tests/ui/unsupported/union_ser.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
union Union {
    x: u8,
    y: (),
}

fn main() {}
